Improve test layout

--- a/test.html
+++ b/test.html
@@ -11,8 +11,9 @@
             <br>
             <strong id="questionnaireTips" class="red"></strong>
         </div>
+        <mdui-divider style="margin: 3% 0 3% 0;"></mdui-divider>
         <div id="references">
-            <h5 style="margin: 20px 0px 20px 0px;">参考信息</h5>
+            <h5 style="margin: 0 0 20px 0;">参考信息</h5>
         </div>
     </div>
 
