--- a/list.html
+++ b/list.html
@@ -1,6 +1,9 @@
-<!-- <mdui-text-field clearable label="输入你想搜索的量表" id="searchBar"></mdui-text-field> -->
 <div id="loadingTip" class="center">
     <mdui-circular-progress></mdui-circular-progress>
     <p>题库正在加载，很快就好</p>
 </div>
-<mdui-list id="questionnaireList"></mdui-list>
+
+<div id="listContent">
+    <mdui-text-field clearable label="输入你想搜索的量表（支持模糊搜索）" id="searchBar"></mdui-text-field>
+    <mdui-list id="questionnaireList"></mdui-list>
+</div>
