在作答时显示作答提示

--- a/test.html
+++ b/test.html
@@ -18,6 +18,10 @@
     </div>
 
     <div id="testArea">
+        <mdui-card variant="filled" class="tip-card">
+            <mdui-icon-tips-and-updates--outlined style="font-size: 27px; min-width: 30px;"></mdui-icon-tips-and-updates--outlined>
+            <p id="questionnaireTips" style="margin: 0; margin-left: 8px;"></p>
+        </mdui-card>
         <div class="progress-tip">
             <span id="progressText"></span>
             <mdui-linear-progress class="progress-bar"></mdui-linear-progress>
@@ -48,6 +52,6 @@
             </thead>
             <tbody id="resultTbody"></tbody>
         </table>
-        <div id="resultChart"></div>
+        <!-- <div id="resultChart"></div> -->
     </div>
 </div>
