在关于对话框里添加仓库地址

--- a/settings.html
+++ b/settings.html
@@ -27,7 +27,7 @@
 
     <mdui-divider style="margin-top: 15px;"></mdui-divider>
 
-    <p class="center" style="margin-bottom: 0;">由 Super12138 开发，网站本体遵循 GPL 3.0 协议在 GitHub 上开源</p>
+    <p class="center" style="margin-bottom: 0;">由 Super12138 开发，网站本体遵循 GPL 3.0 协议在 <a target="_blank" href="https://github.com/Super12138/Ask-Yourself">GitHub</a> 上开源</p>
     <p class="center" style="margin-top: 5px; margin-bottom: 0;">量表内容的版权归研究者所有</p>
     <p class="center" style="margin-top: 5px;">❤️</p>
     
