优化页面布局和显示效果

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <mdui-navigation-bar id="navigationBar"></mdui-navigation-bar>
         <mdui-navigation-rail id="navigationRail"></mdui-navigation-rail>
         <mdui-layout-main id="container"></mdui-layout-main>
-        <mdui-top-app-bar>
+        <mdui-top-app-bar scroll-behavior="elevate" scroll-target="#container">
             <mdui-top-app-bar-title id="appTitle">问心</mdui-top-app-bar-title>
         </mdui-top-app-bar>
     </mdui-layout>
