--- a/settings.html
+++ b/settings.html
@@ -2,7 +2,7 @@
     <mdui-list-item headline="深色模式">
         <mdui-icon-mode-night--outlined slot="icon"></mdui-icon-mode-night--outlined>
         <mdui-segmented-button-group selects="single" slot="end-icon" value="auto" id="darkMode">
-            <mdui-segmented-button value="auto">跟随系统设置</mdui-segmented-button>
+            <mdui-segmented-button value="auto">跟随系统</mdui-segmented-button>
             <mdui-segmented-button value="light">关闭</mdui-segmented-button>
             <mdui-segmented-button value="dark">开启</mdui-segmented-button>
         </mdui-segmented-button-group>
@@ -25,7 +25,7 @@
     <p>本项目所有的量表均为收集互联网上的信息并整理，不对网站内任何量表具有版权。如侵权请联系我，我会及时删除。</p>
     <strong class="red">所有量表的测量结果仅供参考，不作为任何医学诊断的依据。</strong>
 
-    <mdui-divider style="margin-top: 15px;"></mdui-divider>
+    <mdui-divider></mdui-divider>
 
     <p class="center" style="margin-bottom: 0;">由 Super12138 开发，网站本体遵循 GPL 3.0 协议在 <a target="_blank" href="https://github.com/Super12138/Ask-Yourself">GitHub</a> 上开源</p>
     <p class="center" style="margin-top: 5px; margin-bottom: 0;">量表内容的版权归研究者所有</p>
